# nachos-cmake-x64

./: .gitignore  README.md
code/: .clang-format  .gitignore  CMakeLists.txt  Makefile.common  Makefile.dep  README.md  build-switch.sh
code/ass3/: CMakeLists.txt
code/filesys/: CMakeLists.txt  filesys.cc  filesys_core.cmake  filesys_nachos  main.cc  openfile.cc
code/lab2/: CMakeLists.txt  lab2_nachos  scheduler.cc
code/lab3/: CMakeLists.txt  main.cc  prodcons++.cc
code/lab5/: CMakeLists.txt  DISK  filehdr.cc  filehdr.h  filesys.cc  filesys.h  fstest.cc  lab5_core.cmake  openfile.cc  openfile.h
code/lab7-8/: CMakeLists.txt  exception.cc
code/machine/: mipssim.cc  network.cc  translate.cc
code/monitor/: CMakeLists.txt
code/network/: CMakeLists.txt
code/test/: Makefile  donothing.c  exec.c  exec.noff  exit.c  shell.c  sort.noff  tmp.s
code/threads/: CMakeLists.txt  main.cc  switch-linux.s  switch.s  synch.cc  thread.cc  threads_core.cmake  threads_nachos
code/userprog/: CMakeLists.txt  addrspace.cc  addrspace.h  progtest.cc  userprog_core.cmake
code/vm/: CMakeLists.txt  vm_core.cmake
实验报告/: 201705130120_苑宗鹤_实验七.docx  201705130120_苑宗鹤_实验三.doc  201705130120_苑宗鹤_实验二.doc  201705130120_苑宗鹤_实验五.docx  201705130120_苑宗鹤_实验八.docx  201705130120_苑宗鹤_实验六.docx  201705130120_苑宗鹤_实验四.docx  201705130120_苑宗鹤_实验四2.docx  62BDE9FA.tmp  ~$1705130120_苑宗鹤_实验三.doc  ~$1705130120_苑宗鹤_实验五.docx  ~$1705130120_苑宗鹤_实验八.docx  ~$1705130120_苑宗鹤_实验四.doc  ~$1705130120_苑宗鹤_实验四.docx  ~WRL0391.tmp  ~WRL2223.tmp
